# nilesh

./: README.md
Data Structure &  Algorithm assignment/: Stack.py  Tests.py  comparable.py  hastable.py  linkedList.py  node.py  priorityque.py  queue.py  tree.py
Employee Management App/: readme.md
Employee Management App/API App/: docker-compose.yml  dockerfile  requirements.txt  run.py
Employee Management App/API App/instance/: apidb.sqlite
Employee Management App/Main App/: Postman collection link.txt  README.rst  run.py  setup.cfg
Employee Management App/Main App/flaskApp/: auth.py  engine.py
Employee Management App/Main App/flaskApp.egg-info/: SOURCES.txt
Employee Management App/Main App/flaskApp/templates/: header.html
Employee Management App/Main App/flaskApp/templates/auth/: login.html  register.html
Employee Management App/Main App/flaskApp/templates/employee/: details.html  employee_detail.html  update.html
Employee Management App/Main App/tests/: data.sql
Python Advance Assignment/API App/flaskApp/: __init__.py  url.py
Python Advance Assignment/AdvancedPython/: docker-compose.yml
Python Advance Assignment/AdvancedPython/flaskApp/: schema.sql
Python Advance Assignment/Main App/: .coverage  MANIFEST.in  README.rst  config.py  dockerfile  requirements.txt  run.py  setup.py
SQL week 2/: Execercise_2.sql  Exercise_1.sql  Exercise_3.sql  Exercise_4.sql  Exercise_5.sql  Exercise_6.sql
python_week_1/assignment_1/: Config_changer.py  Feature.py  game_board.py  game_setup.py  player.py  snake_ladder.py  test_cal.py
(+30 files in other folders)
