[metadata]
name = Advanced Python project
version = 1.0.0
url = '#'
license = BSD-3-Clause
maintainer = Nagarro
maintainer_email = nilesh.tiwari@nagarro.com
description = The basic Organizational app built entirely using flask.

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskApp